--- a/e_com_vue/public/index.html
+++ b/e_com_vue/public/index.html
@@ -12,6 +12,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
+    <script src="https://js.stripe.com/v3"></script>
   </head>
   <body>
     <noscript>
